# CITARION-dev

./: .gitignore  Dockerfile.production  IMPROVEMENTS_REPORT.md  KNOWN_ISSUES.md  LEARNING_RESOURCES.md  PROJECT.md  README.md  UPDATE_RESOURCES_PROMPT.md  cornix-docs.json  docker-compose.prod.yml  eslint.config.mjs  generate_lorentzian_report.py  package-lock.json  package.json  playwright.config.ts  quantclub_adx.json  quantclub_bollinger.json  quantclub_contents.json  quantclub_heikin.json  quantclub_rsi.json  quantclub_stochastic.json  quantclub_supertrend.json  repo1_supertrend.json  repo2_abu_en.json  repo4_trader_wiki.json  repo_abu.json  repo_abu_en.json  repo_supertrend.json  repo_trader.json  repo_zenbot.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  temp_quantclub.json  temp_readme.json  vercel.json  worklog.md
__tests__/: backtesting.test.ts  paper-trading.test.ts  signal-parser.test.ts
db/: custom.db
docs/: ADVANCED_ANALYTICS.md  AUDIT-REPORT.md  AUDIT_FINAL_VERIFICATION_REPORT.md  AUDIT_REPORT.md  AUDIT_VERIFICATION_REPORT.md  BOT_ACTIVATION.md  BOT_ARCHITECTURE.md  BOT_CODES_STANDARD.md  BOT_MANAGER_API.md  COMPLETE_ML_PIPELINE.md  CORNIX_INTEGRATION_AUDIT.md  CORNIX_SIGNAL_FORMAT.md  FINAL_AUDIT_REPORT.md  FREQUENCY_BOTS.md  FUTURE_RECOMMENDATIONS.md  GENETIC_ALGORITHM.md  (+52 more)
lumibot-service/: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  strategies.py
lumibot-service/strategies/: __init__.py  ai_strategies.py  base.py  citarion_integration.py  extended_strategies.py
(+990 files in other folders)
